FIxed links, Aligned the Featured Businesses, Added IG Embed Code

--- a/Web Development/Web Development/StudentBusiness/StudentBusiness.css
+++ b/Web Development/Web Development/StudentBusiness/StudentBusiness.css
@@ -1,32 +1,76 @@
 /* This is to format our html page: StudentBusiness.js */
 
-.BusinessCategories { 
-    float: left;
-    width: 50%;
-    font-weight: lighter; 
+.WebTitle{
+    text-align: center;
+    font-weight: bold;
+
 }
 
-.Business:after {
-    content: "";
-    display: table;
-    clear: both;
+.FeatBusiness {
+    text-align: center;
+    font-weight: bold;
 }
 
-.Ads { 
-    float: right;
-    width: 50%; 
+.SetFeatBusiness {
+    text-align: center;
+    font-weight: bold;
 }
 
-.SetFeatured{
+.FeaturedBusinessOne {
     display: flex;
     width: 100%;
 }
-
-.SetFeatured div {
+  
+.FeaturedBusinessOne div {
     width: 50%;
 }
-
+  
 .noMargin {
-    margin: 0;
+    margin: 0px;
 }
+  
+.BusinessA {
+    text-align: center;
+    padding-left: 100px;
+}
+  
+.BusinessB {
+    text-align: center;
+    padding-left: 100px;
+}
+  
+.BusinessC {
+    text-align: center;
+    padding-left: 100px;
+}
+  
+.BusinessD {
+    text-align: center;
+    padding-left: 100px;
+}
+
+.BusinessCategoriesTitle {
+    padding-top: 50px;
+    text-align: left;
+    font-weight: bold;
+}
+
+.BusinessCategories {
+    text-align: left;
+    font-weight: lighter;
+    font-size: 15px;
+}
+
+.AdTitle {
+    text-align: right;
+    font-weight: bold;
+}
+
+.Advertisements {
+    text-align: right;
+    font-weight: lighter;
+    font-size: 15px;
+}
+
+
 
